# sleigh-disasm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  x86_example.cpp
ghidra/: CMakeLists.txt
include/: sleigh-disasm.hpp
src/: sleigh-disasm.cpp
